examples/errors/local_redefinition/main.lc

function main() {
    let a = 3;
    let a = "3";
}
